# Perfect-Crewlink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  eslint.config.mjs  index.html  package-lock.json  package.json  perfectcrewlink-pure-rust-metrics.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: DOCS_STYLE_GUIDE.md  perf-baseline-webview2-after-font.json  perf-baseline-webview2-after-lazy-static.json  perf-baseline-webview2-after-lazy.json  perf-baseline-webview2-after-system-font.json  perf-baseline-webview2-after-visible-main.json  perf-baseline-webview2-before.json  webview2-performance-10x-plan.md
scripts/: measure-webview2.ps1  run-tauri.mjs  simulate-cosmetics.mjs  simulate-highlight-audio.mjs  vite-build.cmd  vite-dev.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  game_session.rs  hotkeys.rs  lib.rs  main.rs
src/common/: AmongUsState.ts  ColliderMap.ts  ISettings.d.ts  Mods.ts  appVersion.ts  ipc-messages.ts  overlay-state.ts  playerColors.ts  regions.ts  tauri-api.ts  tauri-game.ts  tauri-hotkeys.ts  tauri-launcher.ts  tauri-offsets.ts  tauri-overlay.ts  tauri-platforms.ts  tauri-system.ts  tauri-window.ts
src/main/: GameReader.ts  avatarGenerator.ts  index.ts
src/renderer/: App.tsx  Avatar.tsx  Footer.tsx  LaunchButton.tsx  Menu.tsx  Overlay.tsx  SupportLink.tsx  Voice.tsx  bridge.ts  cosmetics.ts  index.ts  vad.ts  validateClientPeerConfig.ts
src/renderer/LobbyBrowser/: LobbyBrowser.tsx  (+1 more)
(+9 files in other folders)
