[package]
name = "perfectcrewlink"
version = "1.0.3"
description = "Perfect Crewlink desktop client rewritten with Tauri and Rust"
authors = ["LoMce"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "perfectcrewlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
mime = "0.3"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-opener = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
